fix safari overflow bug

--- a/static-prototype/assets/sass/base/_base.sass
+++ b/static-prototype/assets/sass/base/_base.sass
@@ -10,6 +10,7 @@ body
   -moz-osx-font-smoothing: grayscale
   font-smooth: always
   overflow-x: hidden
+  position: relative
 
 body
   +bg-pattern($color-bg-grey)
